// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Confirmation Page should handle warnings from the server 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <h1
        id="header-patient-assessment"
      >
        COVID-19 clinical risk assessment result
      </h1>
      <div
        class="nhsuk-inset-text"
        id="warning-panel"
      >
        <p>
          We used defaults for the values you did not enter, or were outside our range.
        </p>
        <p>
          We did this for:
        </p>
        <ul>
          <li
            id="warning-undefined-undefined"
          >
            Weight (kg) was unused
          </li>
        </ul>
      </div>
      <p>
        Their result is based on data over a 97-day period, from the first peak of the pandemic. This means that the tool may currently underestimate COVID-19 risk to people who were advised to shield during that time, because they may have been protected from severe outcomes such as hospitalisation and death.
      </p>
      <div
        class="nhsuk-warning-callout"
        id="shielded-patients-list"
      >
        <h3
          class="nhsuk-warning-callout__label"
        >
          Shielded patients list
        </h3>
        <p>
          The UK CMOs have set a threshold for risk as assessed by the QCovid® model above which people should be considered Clinically Extremely Vulnerable (CEV).
        </p>
        <p>
          These thresholds are:
        </p>
        <ul>
          <li>
             an absolute risk of catching and dying of COVID-19 of 0.5% and above 
          </li>
          <li>
             a relative risk of catching and dying of COVID-19 of 10 and above 
          </li>
        </ul>
        <p>
           Patients who meet either of these thresholds should be added to the SPL unless the patient chooses against it or there is a clinical reason not to. 
        </p>
        <p>
          The decision to 
          <a
            href="https://www.gov.uk/government/publications/guidance-on-shielding-and-protecting-extremely-vulnerable-persons-from-covid-19/guidance-on-shielding-and-protecting-extremely-vulnerable-persons-from-covid-19"
            id="shielding-advice-link"
            rel="noreferrer"
            target="_blank"
          >
            add or remove a patient to or from the SPL (opens in new window)
          </a>
           is ultimately a shared decision with the patient.
        </p>
      </div>
      <div
        class="nhsuk-panel"
      >
        <h2
          id="risk-of-catching-covid"
        >
          Combined risk of catching and dying from COVID-19
        </h2>
        <ul>
          <li
            id="absolute-risk-mortality"
          >
            Absolute risk: 
            <strong>
              0.2227% (1 in 449)
            </strong>
          </li>
          <li
            id="relative-risk-mortality"
          >
            Relative risk: 
            <strong>
              1.0
            </strong>
          </li>
        </ul>
        <p>
          The figures above should be used when considering whether a patient should be 
          <a
            href="https://digital.nhs.uk/coronavirus/risk-assessment/clinical-tool/guidance-for-clinicians#additions-to-the-spl"
            id="clinical-guidance-link"
            rel="noreferrer"
            target="_blank"
          >
            added to the SPL (opens in new window).
          </a>
        </p>
        <h2
          class="nhsuk-u-margin-top-7"
          id="risk-of-hospitalisation-heading"
        >
          Combined risk of catching and hospitalisation from COVID-19
        </h2>
        <ul>
          <li
            id="absolute-risk-hospitalisation"
          >
            Absolute risk: 
            <strong>
              0.4003% (1 in 250)
            </strong>
          </li>
          <li
            id="relative-risk-hospitalisation"
          >
            Relative risk: 
            <strong>
              1.0
            </strong>
          </li>
        </ul>
        <p
          class="nhsuk-body-s"
          id="clinical-tool-version"
        >
          Release R1 Version ==REPLACE_RELEASE_VERSION_TOKEN==
        </p>
        <p>
          If recording the result in the patient’s medical record, enter the:
        </p>
        <ul>
          <li>
            date it was generated 
          </li>
          <li>
            release and version numbers of the tool (displayed above) 
          </li>
          <li>
             factors that contributed to the results (displayed below) 
          </li>
        </ul>
        <details
          class="nhsuk-details"
          id="risk-explanation"
        >
          <summary
            aria-expanded="false"
            class="nhsuk-details__summary"
            id="risk-explanation-summary"
            role="button"
            tabindex="0"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              What does absolute and relative risk mean?
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            id="risk-explanation-text"
          >
            <h3
              class="nhsuk-u-margin-bottom-2"
            >
              Absolute risk
            </h3>
            <p>
              This is the combined risk of catching and dying from COVID-19, or catching and being hospitalised from COVID-19 over a 97-day period.
            </p>
            <p>
              For example, an absolute risk score of 1% (or 1 in 100), would mean that we would expect 1 person to catch and die from COVID-19 with the same characteristics and 99 out of 100 to survive.
            </p>
            <h3
              class="nhsuk-u-margin-bottom-2"
            >
              Relative risk
            </h3>
            <p>
              This is the combined risk of catching and dying from COVID-19, or catching and being hospitalised from COVID-19 with this patient’s risk factors, compared with a person of the same age and sex registered at birth but with no other risk factors.
            </p>
            <p>
              For example, a relative risk of 2 would mean a person with these characteristics is twice as likely to catch and die from COVID-19 than someone who is the same age and sex registered at birth but has no risk factors.
            </p>
          </div>
        </details>
      </div>
      <h3>
        What factors contributed to your patient's result
      </h3>
      <h3
        id="results-context"
      >
        How to put this risk result into context
      </h3>
      <p>
        The table shows example risk scenarios of catching and dying from COVID-19 for patients from across the spectrum of absolute and relative risk, so you can use them for comparison purposes.
      </p>
      <p>
        For these risk scenarios the following settings were used to generate the results: Not homeless or resident of a care home (unless stated), blank postcode, and an ethnic origin of 'Mixed or Multiple ethnic groups: Another mixed background'.
      </p>
      <p>
        Very few people (less than 3% of the population) would get an absolute risk result higher than 0.5% for catching and dying from COVID-19.
      </p>
      <div
        class="nhsuk-table-responsive"
      >
        <table
          class="nhsuk-table"
        >
          <caption
            class="nhsuk-table__caption"
          >
            The table shows the risks of catching and dying from COVID-19 for patients with various risk factors.
          </caption>
          <thead
            class="nhsuk-table__head"
          >
            <tr
              class="nhsuk-table__row"
            >
              <th
                class="nhsuk-table__header"
                scope="col"
              >
                Scenarios
              </th>
              <th
                class="nhsuk-table__header"
                scope="col"
              >
                Absolute risk
              </th>
              <th
                class="nhsuk-table__header"
                scope="col"
              >
                Relative risk
              </th>
            </tr>
          </thead>
          <tbody
            class="nhsuk-table__body"
          >
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                85-year-old male, Dementia, Type 2 diabetes, CKD 3, BMI 24, Resident of a care home
              </td>
              <td
                class="nhsuk-table__cell"
              >
                <p>
                  8.8%
                </p>
                <p>
                  meets CEV threshold
                </p>
              </td>
              <td
                class="nhsuk-table__cell"
              >
                <p>
                  40
                </p>
                <p>
                  meets CEV threshold
                </p>
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                55-year-old female, Type 2 diabetes, BMI 28
              </td>
              <td
                class="nhsuk-table__cell"
              >
                0.038%
              </td>
              <td
                class="nhsuk-table__cell"
              >
                8.4
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                25-year-old female, bone marrow transplant in the last 6 months, chemotherapy in the last 12 months (Busulfan), prescribed immunosuppressants in the last 6 months, prescribed oral steroids in the last 6 months, BMI 22
              </td>
              <td
                class="nhsuk-table__cell"
              >
                0.0074%
              </td>
              <td
                class="nhsuk-table__cell"
              >
                <p>
                  24
                </p>
                <p>
                  meets CEV threshold
                </p>
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                30-year-old male, No comorbidities, BMI 30
              </td>
              <td
                class="nhsuk-table__cell"
              >
                0.0009%
              </td>
              <td
                class="nhsuk-table__cell"
              >
                2.3
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <h3
        class="nhsuk-u-margin-top-7"
      >
        Information for your patient
      </h3>
      <p>
        There is 
        <a
          href="https://digital.nhs.uk/coronavirus/risk-assessment/clinical-tool/information-for-patients"
          id="patient-guidance-link"
          rel="noreferrer"
          target="_blank"
        >
          information for patients (opens in new window)
        </a>
         available to help you explain your use of the tool to your patient.
      </p>
      <p>
        You should ensure that the patient is informed of where to find your organisation’s privacy notice covering the use of this tool. NHS Digital have created a template privacy notice that your organisation can use for this purpose.
      </p>
      <h3
        class="nhsuk-u-margin-top-7"
      >
        Advise your patients
      </h3>
      <p>
        As with all shared decision-making conversations, you should advise your patient that they:
      </p>
      <ul>
        <li>
          could potentially reduce their risk by controlling diabetes and losing weight through a healthy balanced diet and doing regular physical activity
        </li>
        <li>
          can protect themselves and others by adhering 
          <a
            href="https://www.gov.uk/coronavirus"
            id="coronavirus-link"
            rel="noreferrer"
            target="_blank"
          >
            to the latest public health measures (opens in new window)
          </a>
        </li>
      </ul>
      <p>
        We know of other factors which influence risk, such as occupation, individual behaviour (such as hand washing, wearing face coverings and visiting friends or family), current infection rates and vaccination status. These are not currently covered by the tool.
      </p>
      <div
        class="nhsuk-inset-text"
      >
        <span
          class="nhsuk-u-visually-hidden"
        >
          Information: 
        </span>
        <p>
          Absolute risks are likely to change over time with changing disease prevalence, improved testing data, advances in medical treatments, vaccinations and changing immunity, and the model will be updated to reflect these. Relative risks are likely to remain more stable over time.
        </p>
      </div>
      <a
        class="nhsuk-u-margin-top-5 nhsuk-u-font-size-19"
        href="/ras/qcovid"
        id="new-assessment-link"
      >
        Start a new COVID-19 risk assessment
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Confirmation Page should match snapshot when death relative risk is greater than one 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <h1
        id="header-patient-assessment"
      >
        COVID-19 clinical risk assessment result
      </h1>
      <p>
        Their result is based on data over a 97-day period, from the first peak of the pandemic. This means that the tool may currently underestimate COVID-19 risk to people who were advised to shield during that time, because they may have been protected from severe outcomes such as hospitalisation and death.
      </p>
      <div
        class="nhsuk-warning-callout"
        id="shielded-patients-list"
      >
        <h3
          class="nhsuk-warning-callout__label"
        >
          Shielded patients list
        </h3>
        <p>
          The UK CMOs have set a threshold for risk as assessed by the QCovid® model above which people should be considered Clinically Extremely Vulnerable (CEV).
        </p>
        <p>
          These thresholds are:
        </p>
        <ul>
          <li>
             an absolute risk of catching and dying of COVID-19 of 0.5% and above 
          </li>
          <li>
             a relative risk of catching and dying of COVID-19 of 10 and above 
          </li>
        </ul>
        <p>
           Patients who meet either of these thresholds should be added to the SPL unless the patient chooses against it or there is a clinical reason not to. 
        </p>
        <p>
          The decision to 
          <a
            href="https://www.gov.uk/government/publications/guidance-on-shielding-and-protecting-extremely-vulnerable-persons-from-covid-19/guidance-on-shielding-and-protecting-extremely-vulnerable-persons-from-covid-19"
            id="shielding-advice-link"
            rel="noreferrer"
            target="_blank"
          >
            add or remove a patient to or from the SPL (opens in new window)
          </a>
           is ultimately a shared decision with the patient.
        </p>
      </div>
      <div
        class="nhsuk-panel"
      >
        <h2
          id="risk-of-catching-covid"
        >
          Combined risk of catching and dying from COVID-19
        </h2>
        <ul>
          <li
            id="absolute-risk-mortality"
          >
            Absolute risk: 
            <strong>
              5.2629% (1 in 19)
            </strong>
          </li>
          <li
            id="relative-risk-mortality"
          >
            Relative risk: 
            <strong>
              24
            </strong>
          </li>
        </ul>
        <p>
          The figures above should be used when considering whether a patient should be 
          <a
            href="https://digital.nhs.uk/coronavirus/risk-assessment/clinical-tool/guidance-for-clinicians#additions-to-the-spl"
            id="clinical-guidance-link"
            rel="noreferrer"
            target="_blank"
          >
            added to the SPL (opens in new window).
          </a>
        </p>
        <h2
          class="nhsuk-u-margin-top-7"
          id="risk-of-hospitalisation-heading"
        >
          Combined risk of catching and hospitalisation from COVID-19
        </h2>
        <ul>
          <li
            id="absolute-risk-hospitalisation"
          >
            Absolute risk: 
            <strong>
              0.4003% (1 in 250)
            </strong>
          </li>
          <li
            id="relative-risk-hospitalisation"
          >
            Relative risk: 
            <strong>
              1.0
            </strong>
          </li>
        </ul>
        <p
          class="nhsuk-body-s"
          id="clinical-tool-version"
        >
          Release R1 Version ==REPLACE_RELEASE_VERSION_TOKEN==
        </p>
        <p>
          If recording the result in the patient’s medical record, enter the:
        </p>
        <ul>
          <li>
            date it was generated 
          </li>
          <li>
            release and version numbers of the tool (displayed above) 
          </li>
          <li>
             factors that contributed to the results (displayed below) 
          </li>
        </ul>
        <details
          class="nhsuk-details"
          id="risk-explanation"
        >
          <summary
            aria-expanded="false"
            class="nhsuk-details__summary"
            id="risk-explanation-summary"
            role="button"
            tabindex="0"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              What does absolute and relative risk mean?
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            id="risk-explanation-text"
          >
            <h3
              class="nhsuk-u-margin-bottom-2"
            >
              Absolute risk
            </h3>
            <p>
              This is the combined risk of catching and dying from COVID-19, or catching and being hospitalised from COVID-19 over a 97-day period.
            </p>
            <p>
              For example, an absolute risk score of 1% (or 1 in 100), would mean that we would expect 1 person to catch and die from COVID-19 with the same characteristics and 99 out of 100 to survive.
            </p>
            <h3
              class="nhsuk-u-margin-bottom-2"
            >
              Relative risk
            </h3>
            <p>
              This is the combined risk of catching and dying from COVID-19, or catching and being hospitalised from COVID-19 with this patient’s risk factors, compared with a person of the same age and sex registered at birth but with no other risk factors.
            </p>
            <p>
              For example, a relative risk of 2 would mean a person with these characteristics is twice as likely to catch and die from COVID-19 than someone who is the same age and sex registered at birth but has no risk factors.
            </p>
          </div>
        </details>
      </div>
      <h3>
        What factors contributed to your patient's result
      </h3>
      <ul
        id="basis-list"
      >
        <li>
          Age: 85
        </li>
        <li>
          height: 178
        </li>
        <li>
          weight: 78
        </li>
      </ul>
      <h3
        id="results-context"
      >
        How to put this risk result into context
      </h3>
      <p>
        The table shows example risk scenarios of catching and dying from COVID-19 for patients from across the spectrum of absolute and relative risk, so you can use them for comparison purposes.
      </p>
      <p>
        For these risk scenarios the following settings were used to generate the results: Not homeless or resident of a care home (unless stated), blank postcode, and an ethnic origin of 'Mixed or Multiple ethnic groups: Another mixed background'.
      </p>
      <p>
        Very few people (less than 3% of the population) would get an absolute risk result higher than 0.5% for catching and dying from COVID-19.
      </p>
      <div
        class="nhsuk-table-responsive"
      >
        <table
          class="nhsuk-table"
        >
          <caption
            class="nhsuk-table__caption"
          >
            The table shows the risks of catching and dying from COVID-19 for patients with various risk factors.
          </caption>
          <thead
            class="nhsuk-table__head"
          >
            <tr
              class="nhsuk-table__row"
            >
              <th
                class="nhsuk-table__header"
                scope="col"
              >
                Scenarios
              </th>
              <th
                class="nhsuk-table__header"
                scope="col"
              >
                Absolute risk
              </th>
              <th
                class="nhsuk-table__header"
                scope="col"
              >
                Relative risk
              </th>
            </tr>
          </thead>
          <tbody
            class="nhsuk-table__body"
          >
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                85-year-old male, Dementia, Type 2 diabetes, CKD 3, BMI 24, Resident of a care home
              </td>
              <td
                class="nhsuk-table__cell"
              >
                <p>
                  8.8%
                </p>
                <p>
                  meets CEV threshold
                </p>
              </td>
              <td
                class="nhsuk-table__cell"
              >
                <p>
                  40
                </p>
                <p>
                  meets CEV threshold
                </p>
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                55-year-old female, Type 2 diabetes, BMI 28
              </td>
              <td
                class="nhsuk-table__cell"
              >
                0.038%
              </td>
              <td
                class="nhsuk-table__cell"
              >
                8.4
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                25-year-old female, bone marrow transplant in the last 6 months, chemotherapy in the last 12 months (Busulfan), prescribed immunosuppressants in the last 6 months, prescribed oral steroids in the last 6 months, BMI 22
              </td>
              <td
                class="nhsuk-table__cell"
              >
                0.0074%
              </td>
              <td
                class="nhsuk-table__cell"
              >
                <p>
                  24
                </p>
                <p>
                  meets CEV threshold
                </p>
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                30-year-old male, No comorbidities, BMI 30
              </td>
              <td
                class="nhsuk-table__cell"
              >
                0.0009%
              </td>
              <td
                class="nhsuk-table__cell"
              >
                2.3
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <h3
        class="nhsuk-u-margin-top-7"
      >
        Information for your patient
      </h3>
      <p>
        There is 
        <a
          href="https://digital.nhs.uk/coronavirus/risk-assessment/clinical-tool/information-for-patients"
          id="patient-guidance-link"
          rel="noreferrer"
          target="_blank"
        >
          information for patients (opens in new window)
        </a>
         available to help you explain your use of the tool to your patient.
      </p>
      <p>
        You should ensure that the patient is informed of where to find your organisation’s privacy notice covering the use of this tool. NHS Digital have created a template privacy notice that your organisation can use for this purpose.
      </p>
      <h3
        class="nhsuk-u-margin-top-7"
      >
        Advise your patients
      </h3>
      <p>
        As with all shared decision-making conversations, you should advise your patient that they:
      </p>
      <ul>
        <li>
          could potentially reduce their risk by controlling diabetes and losing weight through a healthy balanced diet and doing regular physical activity
        </li>
        <li>
          can protect themselves and others by adhering 
          <a
            href="https://www.gov.uk/coronavirus"
            id="coronavirus-link"
            rel="noreferrer"
            target="_blank"
          >
            to the latest public health measures (opens in new window)
          </a>
        </li>
      </ul>
      <p>
        We know of other factors which influence risk, such as occupation, individual behaviour (such as hand washing, wearing face coverings and visiting friends or family), current infection rates and vaccination status. These are not currently covered by the tool.
      </p>
      <div
        class="nhsuk-inset-text"
      >
        <span
          class="nhsuk-u-visually-hidden"
        >
          Information: 
        </span>
        <p>
          Absolute risks are likely to change over time with changing disease prevalence, improved testing data, advances in medical treatments, vaccinations and changing immunity, and the model will be updated to reflect these. Relative risks are likely to remain more stable over time.
        </p>
      </div>
      <a
        class="nhsuk-u-margin-top-5 nhsuk-u-font-size-19"
        href="/ras/qcovid"
        id="new-assessment-link"
      >
        Start a new COVID-19 risk assessment
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Confirmation Page should match snapshot when hospitalisation relative risk is greater than one 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <h1
        id="header-patient-assessment"
      >
        COVID-19 clinical risk assessment result
      </h1>
      <p>
        Their result is based on data over a 97-day period, from the first peak of the pandemic. This means that the tool may currently underestimate COVID-19 risk to people who were advised to shield during that time, because they may have been protected from severe outcomes such as hospitalisation and death.
      </p>
      <div
        class="nhsuk-warning-callout"
        id="shielded-patients-list"
      >
        <h3
          class="nhsuk-warning-callout__label"
        >
          Shielded patients list
        </h3>
        <p>
          The UK CMOs have set a threshold for risk as assessed by the QCovid® model above which people should be considered Clinically Extremely Vulnerable (CEV).
        </p>
        <p>
          These thresholds are:
        </p>
        <ul>
          <li>
             an absolute risk of catching and dying of COVID-19 of 0.5% and above 
          </li>
          <li>
             a relative risk of catching and dying of COVID-19 of 10 and above 
          </li>
        </ul>
        <p>
           Patients who meet either of these thresholds should be added to the SPL unless the patient chooses against it or there is a clinical reason not to. 
        </p>
        <p>
          The decision to 
          <a
            href="https://www.gov.uk/government/publications/guidance-on-shielding-and-protecting-extremely-vulnerable-persons-from-covid-19/guidance-on-shielding-and-protecting-extremely-vulnerable-persons-from-covid-19"
            id="shielding-advice-link"
            rel="noreferrer"
            target="_blank"
          >
            add or remove a patient to or from the SPL (opens in new window)
          </a>
           is ultimately a shared decision with the patient.
        </p>
      </div>
      <div
        class="nhsuk-panel"
      >
        <h2
          id="risk-of-catching-covid"
        >
          Combined risk of catching and dying from COVID-19
        </h2>
        <ul>
          <li
            id="absolute-risk-mortality"
          >
            Absolute risk: 
            <strong>
              0.2227% (1 in 449)
            </strong>
          </li>
          <li
            id="relative-risk-mortality"
          >
            Relative risk: 
            <strong>
              1.0
            </strong>
          </li>
        </ul>
        <p>
          The figures above should be used when considering whether a patient should be 
          <a
            href="https://digital.nhs.uk/coronavirus/risk-assessment/clinical-tool/guidance-for-clinicians#additions-to-the-spl"
            id="clinical-guidance-link"
            rel="noreferrer"
            target="_blank"
          >
            added to the SPL (opens in new window).
          </a>
        </p>
        <h2
          class="nhsuk-u-margin-top-7"
          id="risk-of-hospitalisation-heading"
        >
          Combined risk of catching and hospitalisation from COVID-19
        </h2>
        <ul>
          <li
            id="absolute-risk-hospitalisation"
          >
            Absolute risk: 
            <strong>
              0.8% (1 in 125)
            </strong>
          </li>
          <li
            id="relative-risk-hospitalisation"
          >
            Relative risk: 
            <strong>
              1.0
            </strong>
          </li>
        </ul>
        <p
          class="nhsuk-body-s"
          id="clinical-tool-version"
        >
          Release R1 Version ==REPLACE_RELEASE_VERSION_TOKEN==
        </p>
        <p>
          If recording the result in the patient’s medical record, enter the:
        </p>
        <ul>
          <li>
            date it was generated 
          </li>
          <li>
            release and version numbers of the tool (displayed above) 
          </li>
          <li>
             factors that contributed to the results (displayed below) 
          </li>
        </ul>
        <details
          class="nhsuk-details"
          id="risk-explanation"
        >
          <summary
            aria-expanded="false"
            class="nhsuk-details__summary"
            id="risk-explanation-summary"
            role="button"
            tabindex="0"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              What does absolute and relative risk mean?
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            id="risk-explanation-text"
          >
            <h3
              class="nhsuk-u-margin-bottom-2"
            >
              Absolute risk
            </h3>
            <p>
              This is the combined risk of catching and dying from COVID-19, or catching and being hospitalised from COVID-19 over a 97-day period.
            </p>
            <p>
              For example, an absolute risk score of 1% (or 1 in 100), would mean that we would expect 1 person to catch and die from COVID-19 with the same characteristics and 99 out of 100 to survive.
            </p>
            <h3
              class="nhsuk-u-margin-bottom-2"
            >
              Relative risk
            </h3>
            <p>
              This is the combined risk of catching and dying from COVID-19, or catching and being hospitalised from COVID-19 with this patient’s risk factors, compared with a person of the same age and sex registered at birth but with no other risk factors.
            </p>
            <p>
              For example, a relative risk of 2 would mean a person with these characteristics is twice as likely to catch and die from COVID-19 than someone who is the same age and sex registered at birth but has no risk factors.
            </p>
          </div>
        </details>
      </div>
      <h3>
        What factors contributed to your patient's result
      </h3>
      <h3
        id="results-context"
      >
        How to put this risk result into context
      </h3>
      <p>
        The table shows example risk scenarios of catching and dying from COVID-19 for patients from across the spectrum of absolute and relative risk, so you can use them for comparison purposes.
      </p>
      <p>
        For these risk scenarios the following settings were used to generate the results: Not homeless or resident of a care home (unless stated), blank postcode, and an ethnic origin of 'Mixed or Multiple ethnic groups: Another mixed background'.
      </p>
      <p>
        Very few people (less than 3% of the population) would get an absolute risk result higher than 0.5% for catching and dying from COVID-19.
      </p>
      <div
        class="nhsuk-table-responsive"
      >
        <table
          class="nhsuk-table"
        >
          <caption
            class="nhsuk-table__caption"
          >
            The table shows the risks of catching and dying from COVID-19 for patients with various risk factors.
          </caption>
          <thead
            class="nhsuk-table__head"
          >
            <tr
              class="nhsuk-table__row"
            >
              <th
                class="nhsuk-table__header"
                scope="col"
              >
                Scenarios
              </th>
              <th
                class="nhsuk-table__header"
                scope="col"
              >
                Absolute risk
              </th>
              <th
                class="nhsuk-table__header"
                scope="col"
              >
                Relative risk
              </th>
            </tr>
          </thead>
          <tbody
            class="nhsuk-table__body"
          >
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                85-year-old male, Dementia, Type 2 diabetes, CKD 3, BMI 24, Resident of a care home
              </td>
              <td
                class="nhsuk-table__cell"
              >
                <p>
                  8.8%
                </p>
                <p>
                  meets CEV threshold
                </p>
              </td>
              <td
                class="nhsuk-table__cell"
              >
                <p>
                  40
                </p>
                <p>
                  meets CEV threshold
                </p>
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                55-year-old female, Type 2 diabetes, BMI 28
              </td>
              <td
                class="nhsuk-table__cell"
              >
                0.038%
              </td>
              <td
                class="nhsuk-table__cell"
              >
                8.4
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                25-year-old female, bone marrow transplant in the last 6 months, chemotherapy in the last 12 months (Busulfan), prescribed immunosuppressants in the last 6 months, prescribed oral steroids in the last 6 months, BMI 22
              </td>
              <td
                class="nhsuk-table__cell"
              >
                0.0074%
              </td>
              <td
                class="nhsuk-table__cell"
              >
                <p>
                  24
                </p>
                <p>
                  meets CEV threshold
                </p>
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                30-year-old male, No comorbidities, BMI 30
              </td>
              <td
                class="nhsuk-table__cell"
              >
                0.0009%
              </td>
              <td
                class="nhsuk-table__cell"
              >
                2.3
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <h3
        class="nhsuk-u-margin-top-7"
      >
        Information for your patient
      </h3>
      <p>
        There is 
        <a
          href="https://digital.nhs.uk/coronavirus/risk-assessment/clinical-tool/information-for-patients"
          id="patient-guidance-link"
          rel="noreferrer"
          target="_blank"
        >
          information for patients (opens in new window)
        </a>
         available to help you explain your use of the tool to your patient.
      </p>
      <p>
        You should ensure that the patient is informed of where to find your organisation’s privacy notice covering the use of this tool. NHS Digital have created a template privacy notice that your organisation can use for this purpose.
      </p>
      <h3
        class="nhsuk-u-margin-top-7"
      >
        Advise your patients
      </h3>
      <p>
        As with all shared decision-making conversations, you should advise your patient that they:
      </p>
      <ul>
        <li>
          could potentially reduce their risk by controlling diabetes and losing weight through a healthy balanced diet and doing regular physical activity
        </li>
        <li>
          can protect themselves and others by adhering 
          <a
            href="https://www.gov.uk/coronavirus"
            id="coronavirus-link"
            rel="noreferrer"
            target="_blank"
          >
            to the latest public health measures (opens in new window)
          </a>
        </li>
      </ul>
      <p>
        We know of other factors which influence risk, such as occupation, individual behaviour (such as hand washing, wearing face coverings and visiting friends or family), current infection rates and vaccination status. These are not currently covered by the tool.
      </p>
      <div
        class="nhsuk-inset-text"
      >
        <span
          class="nhsuk-u-visually-hidden"
        >
          Information: 
        </span>
        <p>
          Absolute risks are likely to change over time with changing disease prevalence, improved testing data, advances in medical treatments, vaccinations and changing immunity, and the model will be updated to reflect these. Relative risks are likely to remain more stable over time.
        </p>
      </div>
      <a
        class="nhsuk-u-margin-top-5 nhsuk-u-font-size-19"
        href="/ras/qcovid"
        id="new-assessment-link"
      >
        Start a new COVID-19 risk assessment
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Confirmation Page should match the snapshot when relative risk is not greater than 1 1`] = `
<DocumentFragment>
  <div
    class="nhsuk-grid-row"
  >
    <div
      class="nhsuk-grid-column-two-thirds"
    >
      <h1
        id="header-patient-assessment"
      >
        COVID-19 clinical risk assessment result
      </h1>
      <p>
        Their result is based on data over a 97-day period, from the first peak of the pandemic. This means that the tool may currently underestimate COVID-19 risk to people who were advised to shield during that time, because they may have been protected from severe outcomes such as hospitalisation and death.
      </p>
      <div
        class="nhsuk-warning-callout"
        id="shielded-patients-list"
      >
        <h3
          class="nhsuk-warning-callout__label"
        >
          Shielded patients list
        </h3>
        <p>
          The UK CMOs have set a threshold for risk as assessed by the QCovid® model above which people should be considered Clinically Extremely Vulnerable (CEV).
        </p>
        <p>
          These thresholds are:
        </p>
        <ul>
          <li>
             an absolute risk of catching and dying of COVID-19 of 0.5% and above 
          </li>
          <li>
             a relative risk of catching and dying of COVID-19 of 10 and above 
          </li>
        </ul>
        <p>
           Patients who meet either of these thresholds should be added to the SPL unless the patient chooses against it or there is a clinical reason not to. 
        </p>
        <p>
          The decision to 
          <a
            href="https://www.gov.uk/government/publications/guidance-on-shielding-and-protecting-extremely-vulnerable-persons-from-covid-19/guidance-on-shielding-and-protecting-extremely-vulnerable-persons-from-covid-19"
            id="shielding-advice-link"
            rel="noreferrer"
            target="_blank"
          >
            add or remove a patient to or from the SPL (opens in new window)
          </a>
           is ultimately a shared decision with the patient.
        </p>
      </div>
      <div
        class="nhsuk-panel"
      >
        <h2
          id="risk-of-catching-covid"
        >
          Combined risk of catching and dying from COVID-19
        </h2>
        <ul>
          <li
            id="absolute-risk-mortality"
          >
            Absolute risk: 
            <strong>
              0.2227% (1 in 449)
            </strong>
          </li>
          <li
            id="relative-risk-mortality"
          >
            Relative risk: 
            <strong>
              1.0
            </strong>
          </li>
        </ul>
        <p>
          The figures above should be used when considering whether a patient should be 
          <a
            href="https://digital.nhs.uk/coronavirus/risk-assessment/clinical-tool/guidance-for-clinicians#additions-to-the-spl"
            id="clinical-guidance-link"
            rel="noreferrer"
            target="_blank"
          >
            added to the SPL (opens in new window).
          </a>
        </p>
        <h2
          class="nhsuk-u-margin-top-7"
          id="risk-of-hospitalisation-heading"
        >
          Combined risk of catching and hospitalisation from COVID-19
        </h2>
        <ul>
          <li
            id="absolute-risk-hospitalisation"
          >
            Absolute risk: 
            <strong>
              0.4003% (1 in 250)
            </strong>
          </li>
          <li
            id="relative-risk-hospitalisation"
          >
            Relative risk: 
            <strong>
              1.0
            </strong>
          </li>
        </ul>
        <p
          class="nhsuk-body-s"
          id="clinical-tool-version"
        >
          Release R1 Version ==REPLACE_RELEASE_VERSION_TOKEN==
        </p>
        <p>
          If recording the result in the patient’s medical record, enter the:
        </p>
        <ul>
          <li>
            date it was generated 
          </li>
          <li>
            release and version numbers of the tool (displayed above) 
          </li>
          <li>
             factors that contributed to the results (displayed below) 
          </li>
        </ul>
        <details
          class="nhsuk-details"
          id="risk-explanation"
        >
          <summary
            aria-expanded="false"
            class="nhsuk-details__summary"
            id="risk-explanation-summary"
            role="button"
            tabindex="0"
          >
            <span
              class="nhsuk-details__summary-text"
            >
              What does absolute and relative risk mean?
            </span>
          </summary>
          <div
            class="nhsuk-details__text"
            id="risk-explanation-text"
          >
            <h3
              class="nhsuk-u-margin-bottom-2"
            >
              Absolute risk
            </h3>
            <p>
              This is the combined risk of catching and dying from COVID-19, or catching and being hospitalised from COVID-19 over a 97-day period.
            </p>
            <p>
              For example, an absolute risk score of 1% (or 1 in 100), would mean that we would expect 1 person to catch and die from COVID-19 with the same characteristics and 99 out of 100 to survive.
            </p>
            <h3
              class="nhsuk-u-margin-bottom-2"
            >
              Relative risk
            </h3>
            <p>
              This is the combined risk of catching and dying from COVID-19, or catching and being hospitalised from COVID-19 with this patient’s risk factors, compared with a person of the same age and sex registered at birth but with no other risk factors.
            </p>
            <p>
              For example, a relative risk of 2 would mean a person with these characteristics is twice as likely to catch and die from COVID-19 than someone who is the same age and sex registered at birth but has no risk factors.
            </p>
          </div>
        </details>
      </div>
      <h3>
        What factors contributed to your patient's result
      </h3>
      <h3
        id="results-context"
      >
        How to put this risk result into context
      </h3>
      <p>
        The table shows example risk scenarios of catching and dying from COVID-19 for patients from across the spectrum of absolute and relative risk, so you can use them for comparison purposes.
      </p>
      <p>
        For these risk scenarios the following settings were used to generate the results: Not homeless or resident of a care home (unless stated), blank postcode, and an ethnic origin of 'Mixed or Multiple ethnic groups: Another mixed background'.
      </p>
      <p>
        Very few people (less than 3% of the population) would get an absolute risk result higher than 0.5% for catching and dying from COVID-19.
      </p>
      <div
        class="nhsuk-table-responsive"
      >
        <table
          class="nhsuk-table"
        >
          <caption
            class="nhsuk-table__caption"
          >
            The table shows the risks of catching and dying from COVID-19 for patients with various risk factors.
          </caption>
          <thead
            class="nhsuk-table__head"
          >
            <tr
              class="nhsuk-table__row"
            >
              <th
                class="nhsuk-table__header"
                scope="col"
              >
                Scenarios
              </th>
              <th
                class="nhsuk-table__header"
                scope="col"
              >
                Absolute risk
              </th>
              <th
                class="nhsuk-table__header"
                scope="col"
              >
                Relative risk
              </th>
            </tr>
          </thead>
          <tbody
            class="nhsuk-table__body"
          >
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                85-year-old male, Dementia, Type 2 diabetes, CKD 3, BMI 24, Resident of a care home
              </td>
              <td
                class="nhsuk-table__cell"
              >
                <p>
                  8.8%
                </p>
                <p>
                  meets CEV threshold
                </p>
              </td>
              <td
                class="nhsuk-table__cell"
              >
                <p>
                  40
                </p>
                <p>
                  meets CEV threshold
                </p>
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                55-year-old female, Type 2 diabetes, BMI 28
              </td>
              <td
                class="nhsuk-table__cell"
              >
                0.038%
              </td>
              <td
                class="nhsuk-table__cell"
              >
                8.4
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                25-year-old female, bone marrow transplant in the last 6 months, chemotherapy in the last 12 months (Busulfan), prescribed immunosuppressants in the last 6 months, prescribed oral steroids in the last 6 months, BMI 22
              </td>
              <td
                class="nhsuk-table__cell"
              >
                0.0074%
              </td>
              <td
                class="nhsuk-table__cell"
              >
                <p>
                  24
                </p>
                <p>
                  meets CEV threshold
                </p>
              </td>
            </tr>
            <tr
              class="nhsuk-table__row"
            >
              <td
                class="nhsuk-table__cell"
              >
                30-year-old male, No comorbidities, BMI 30
              </td>
              <td
                class="nhsuk-table__cell"
              >
                0.0009%
              </td>
              <td
                class="nhsuk-table__cell"
              >
                2.3
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <h3
        class="nhsuk-u-margin-top-7"
      >
        Information for your patient
      </h3>
      <p>
        There is 
        <a
          href="https://digital.nhs.uk/coronavirus/risk-assessment/clinical-tool/information-for-patients"
          id="patient-guidance-link"
          rel="noreferrer"
          target="_blank"
        >
          information for patients (opens in new window)
        </a>
         available to help you explain your use of the tool to your patient.
      </p>
      <p>
        You should ensure that the patient is informed of where to find your organisation’s privacy notice covering the use of this tool. NHS Digital have created a template privacy notice that your organisation can use for this purpose.
      </p>
      <h3
        class="nhsuk-u-margin-top-7"
      >
        Advise your patients
      </h3>
      <p>
        As with all shared decision-making conversations, you should advise your patient that they:
      </p>
      <ul>
        <li>
          could potentially reduce their risk by controlling diabetes and losing weight through a healthy balanced diet and doing regular physical activity
        </li>
        <li>
          can protect themselves and others by adhering 
          <a
            href="https://www.gov.uk/coronavirus"
            id="coronavirus-link"
            rel="noreferrer"
            target="_blank"
          >
            to the latest public health measures (opens in new window)
          </a>
        </li>
      </ul>
      <p>
        We know of other factors which influence risk, such as occupation, individual behaviour (such as hand washing, wearing face coverings and visiting friends or family), current infection rates and vaccination status. These are not currently covered by the tool.
      </p>
      <div
        class="nhsuk-inset-text"
      >
        <span
          class="nhsuk-u-visually-hidden"
        >
          Information: 
        </span>
        <p>
          Absolute risks are likely to change over time with changing disease prevalence, improved testing data, advances in medical treatments, vaccinations and changing immunity, and the model will be updated to reflect these. Relative risks are likely to remain more stable over time.
        </p>
      </div>
      <a
        class="nhsuk-u-margin-top-5 nhsuk-u-font-size-19"
        href="/ras/qcovid"
        id="new-assessment-link"
      >
        Start a new COVID-19 risk assessment
      </a>
    </div>
  </div>
</DocumentFragment>
`;
